--- a/home.html
+++ b/home.html
@@ -9,21 +9,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/home.css" media="screen" />
-    <title>A origem do mosquito</title>
+    <title>O surgimento do mosquito</title>
 </head>
 <body>
-    <nav>
-        <span id="titulo">A origem do mosquito</span>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <h1 id="titulo">O surgimento do mosquito</h1>
 
-        <span id="guia">
-            <span class="pointer">Ínicio</span>
-            <span>&nbsp;&nbsp;</span>
-            <span class="pointer">Contos</span>
-            <span>&nbsp;&nbsp;</span>
-            <span class="pointer">Síntese</span>
-            <span>&nbsp;&nbsp;</span>
-            <span class="pointer">Contato</span>
-        </span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon navbar-dark"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <a class="pointer" href="#">Ínicio</a>
+                <span>&nbsp;&nbsp;&nbsp;</span>
+                <a class="pointer" href="#">Contos</a>
+                <span>&nbsp;&nbsp;&nbsp;</span>
+                <a class="pointer" href="#">Síntese</a>
+                <span>&nbsp;&nbsp;&nbsp;</span>
+                <a class="pointer" href="#">Contato</a>
+            </div>
+        </div>
     </nav>
 
     <img id="capa" src="https://picsum.photos/1200/300">
@@ -36,7 +42,7 @@
         <div class="center" id="resumo">
             <div id="povo-terena">
                 <div id="border-image">
-                    <img src="https://picsum.photos/300/300">
+                    <img src="https://picsum.photos/300">
                 </div>
             </div>
             <div id="text-terena">
