Erro em linkar imagens

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             </div>
     </nav>
 
-    <img id="capa" src="/imagens/capa.png" alt="Imagem grande em toda tela com um fundo de folhas e o nome Terena">
+    <img id="capa" src="imagens/capa.png" alt="Imagem grande em toda tela com um fundo de folhas e o nome Terena">
 
     <div id="text">
         <h1><span>&nbsp;&nbsp;> O POVO TERENA <&nbsp;&nbsp;</span></h1>
@@ -41,7 +41,7 @@
         <div class="center" id="resumo">
             <div id="povo-terena">
                 <div id="border-image">
-                    <img src="/imagens/Indigena_da_etnia_Terena.jpg" alt="Índigena da etnia Terena, foto pega da Wikipédia">
+                    <img src="imagens/Indigena_da_etnia_Terena.jpg" alt="Índigena da etnia Terena, foto pega da Wikipédia">
                 </div>
             </div>
             <div id="text-terena">
@@ -141,14 +141,14 @@
                     
                     <div>
                         <a href="https://docs.google.com/document/d/1xn1oejcbnP8M0pikBawGOgYkAevjeRdbMcuAWi9Q6eg/edit?usp=sharing">
-                            <img src="/imagens/Waiwai.jpeg" alt="Foto ilustrativa de capa">
+                            <img src="imagens/Waiwai.jpeg" alt="Foto ilustrativa de capa">
                             <figcaption>Pé de Garrafa</figcaption>
                         </a>
                     </div>
                     
                     <div>
                         <a href="https://docs.google.com/document/d/1sacHCpVIaZb-pKEIFFrDvvb6UHO5wLwxejf7UQrccoc/edit?usp=sharing">
-                            <img src="/imagens/Terena.jpeg" alt="Foto ilustrativa de capa">
+                            <img src="imagens/Terena.jpeg" alt="Foto ilustrativa de capa">
                             <figcaption>O saci sapeca</figcaption>
                         </a>
                     </div>
