Resolvento problema de link

--- a/home.html
+++ b/home.html
@@ -23,9 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <a class="pointer" href="#text">Ínicio</a>
                 <span>&nbsp;&nbsp;&nbsp;</span>
-                <a class="pointer" href="#historia">Contos</a>
+                <a class="pointer" href="#historia">Conto</a>
                 <span>&nbsp;&nbsp;&nbsp;</span>
-                <a class="pointer" href="#obras_relacionadas">Síntese</a>
+                <a class="pointer" href="#obras_relacionadas">Obras relacionadas</a>
                 <span>&nbsp;&nbsp;&nbsp;</span>
                 <a class="pointer" href="#footer">Contato</a>
             </div>
@@ -184,7 +184,7 @@
 
     <footer id="footer">
         <span>
-            Créditos: Lucas Corrêa, Manuela Toniolo e Samuel Schlemper e <a href="/licenca.html" id="outros">outros</a>
+            Créditos: Lucas Corrêa, Manuela Toniolo e Samuel Schlemper e <a href="licenca.html" id="outros">outros</a>
         </span>
         <span>
             <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
